# bevy_template

./: .gitignore  Cargo.toml  README.MD  README.md  rustfmt.toml
bevy_app/: Cargo.toml
bevy_app/src/: main.rs
bevy_app/src/splash/: mod.rs  plugin.rs
bevy_app/src/splash/components/: tags.rs
bevy_app/src/splash/resources/: mod.rs  splash_state.rs
bevy_app/src/splash/systems/: enter_splash.rs  exit_splash.rs  mod.rs  update_splash.rs
bevy_app/src/systems/: mod.rs  quit_game.rs  set_window_icon.rs
bevy_data/: Cargo.toml
bevy_data/src/: constants.rs  lib.rs  plugin.rs
bevy_data/src/states/: app_state.rs  input_state.rs  mod.rs
bevy_utils/: Cargo.toml
bevy_utils/src/: lib.rs  plugin.rs
bevy_utils/src/asset_loaders/: atlas_loader.rs  mod.rs
bevy_utils/src/files/: mod.rs
bevy_utils/src/settings/: graphics_settings.rs  mod.rs
bevy_utils/src/traits/: mod.rs  save_load.rs
game/: Cargo.toml
game/src/: lib.rs
src/: config.rs  main.rs
src/app/: icon.rs  mod.rs
src/app/default_plugins/: image.rs  log.rs  mod.rs  window.rs
src/debug/: mod.rs
tools/: Cargo.toml
