[package]
name = "bevy_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "core",
]
dev = [
    "bevy-inspector-egui"
]
tracing = []

core = [
    "bevy/bevy_winit",
    "bevy/png",
]

################################
#########       Optimizations
################################

[profile.dev]
opt-level = 1 # Minor for us
[profile.dev.package."*"]
opt-level = 3 # Major for everyone else

################################
#########       App Dependencies
################################
[dependencies]
# Workspace
game = { workspace = true }

# External
bevy = { workspace = true }
bevy_egui = { workspace = true }
winit = { workspace = true }
image = { workspace = true }

bevy-inspector-egui = { version = "0.18", optional = true } # Inspector plugin for the bevy game engine

################################
#########       Workspace Dependencies
################################
[workspace]
members = [
    "game",
    "tools",
]

[workspace.dependencies]
# Workspace
game = { path = "game" }
tools = { path = "tools" }

# External
bevy = { version = "0.10", default-features = false } # A refreshingly simple data-driven game engine and app framework
bevy_egui = "0.20" # A plugin for Egui integration into Bevy

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false } # Cross-platform window creation library.
image = { version = "0.24", default-features = false } # Imaging library written in Rust. Provides basic filters and decoders for the most common image formats.
